# game-engine

./: .gitattributes  .gitignore  CMakeLists.txt  license.txt  readme.md  readme.txt
Lua/: CMakeLists.txt
assets/: alternate.tga  asteroid1.tga  asteroid2.tga  asteroid3.tga  bomb.lua  continue.tga  custom1.tga  custom2.tga  custom3.tga  door.tga  gnsh-green.tga  hero.tga  nerd.tga  newgame.tga  quit.tga  rouge.lua  round.tga  ship.tga  snake.lua  square.tga  test.lua  tiles.tga  tiles16.tga  tiles32.tga
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
scripts/: asteroid.lua  bomb.lua  breakout.lua  dungeon.lua  painter.lua  pftest.lua  physics.lua  platform.lua  rouge.lua  runner.lua  snake.lua  test.lua  tetromino.lua  tiles.lua
src/: Aabb.cpp  Aabb.h  Aabb.hpp  AabbCollider.cpp  AabbCollider.h  AabbCollider.hpp  Actor.cpp  Actor.h  Actor.hpp  BasicCamera.cpp  BasicCamera.h  BasicCamera.hpp  Camera2D.cpp  Camera2D.hpp  Canvas.cpp  Canvas.h  Canvas.hpp  Component.h  DebugRenderer.h  Event.h  Event.hpp  GlfwGamepad.cpp  GlfwGamepad.h  GlfwInstance.cpp  GlfwInstance.h  GlfwInstance.hpp  GlfwRenderer.cpp  GlfwRenderer.h  GlfwRenderer.hpp  GlfwTexture.cpp  GlfwTexture.h  GlfwTexture.hpp  GraphicsComponent.h  IAudio.hpp  ICamera.cpp  ICamera.h  ICamera.hpp  ICollider.cpp  ICollider.h  ICollider.hpp  (+58 more)
src/GLFW/: GlfwGamepad.hpp  GlfwRenderer.cpp  GlfwRenderer.hpp  GlfwTexture.cpp
src/SDL/: SdlAudio.cpp  SdlInstance.cpp  SdlInstance.hpp  SdlRenderer.cpp  SdlRenderer.hpp
